	pixmap to be fully transparent (if in 32bit mode)

2009-01-10  Sven Herzberg  <sven@imendio.com>

	Don't expect 24/32 bit pixmap depth, expect system_depth/32

	* server/sapwood-server.c (extract_pixmap_single),
	(pixbuf_open_response_new): replace the 24 with a better value;
	fixes running sapwood in a 16 bit Xephyr window

2009-01-09  Sven Herzberg  <sven@imendio.com>

	Added a main window to the RGBA demo

	* demos/rgba-demo.c (main): added the main window

2009-01-09  Sven Herzberg  <sven@imendio.com>

	Started work on the RGBA demo

	* demos/Makefile.am,
	* demos/rgba-demo.c: added the skeleton for the demo

2009-01-09  Sven Herzberg  <sven@imendio.com>

	Use 32-bit code if possible and requested

	* demos/gradient.c (main): now you can request 32-bit code by passing
	an argument like "--enable-alpha" to the demo itself

2009-01-09  Sven Herzberg  <sven@imendio.com>

	Added 32 bit support to the server.

	* server/sapwood-server.c (extract_pixmap_single),
	(extract_pixmaps), (pixbuf_open_response_new),
	(pixbuf_open_request_equal): now the server also manages 32-bit
	pixmaps properly

2009-01-08  Sven Herzberg  <sven@imendio.com>

	Properly forward the depth information.

	* engine/sapwood-pixmap.c,
	* engine/sapwood-pixmap.h,
	* engine/sapwood-style.c,
	* engine/theme-pixbuf.c,
	* engine/theme-pixbuf.h: properly forward the depth information into
	the sapwood server

2009-01-08  Sven Herzberg  <sven@imendio.com>

	Added a depth field to the PixbufOpenRequest

	To be able to support both 24-bit and 32-bit windows with proper
	pixmaps, we're going to require being able to separate between the
	requests.

	* engine/sapwood-pixmap.c (sapwood_pixmap_get_for_file): set the depth
	to 24 by default now
	* protocol/sapwood-proto.h: added a depth field, so the engine can
	tell the server which pixmap to provide
	* server/sapwood-server.c (extract_pixmap_single),
	(pixbuf_open_response_new): require the depth to be 24 in any
	situation now